content avoids getting covered by top-bar and sthe sizes are configured after the material design spec

--- a/src/main/resources/app/styles/main.less
+++ b/src/main/resources/app/styles/main.less
@@ -5,11 +5,19 @@
 */
 
 @color-forms : rgba(71, 90, 120, 0.708);
-@mobile: ~"screen and (min-width: 960px) and (max-width: 1285px)";
-/*Does not crash with top bar*/
+// breakpoints 
+@mobile: ~"screen and (max-width: 960px)";
 
+// Spacing, according to the material specs 
+@mobile-spacing: 56px;
+@desktop-spacing: 64px;
+
+/*Does not crash with top bar*/
 .avoidBar {
-    margin-top: 10%;
+    padding-top: @desktop-spacing;
+    @media @mobile {
+        padding-top: @mobile-spacing;
+    }
 }
 
 /*Form-Box*/
